--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,41 @@
+aenum==3.1.11
+allure-behave==2.10.0
+allure-python-commons==2.10.0
 async-generator==1.10
 attrs==22.1.0
 behave==1.2.6
+behave-reportportal==1.0.1
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
+chromedriver-binary==105.0.5195.19.0
 colorama==0.4.5
 cryptography==37.0.4
+delayed-assert==0.3.6
+Faker==14.1.0
 h11==0.13.0
 idna==3.3
 outcome==1.2.0
 parse==1.19.0
 parse-type==0.6.0
+pluggy==1.0.0
+prettytable==3.3.0
 pycparser==2.21
 pyOpenSSL==22.0.0
 PySocks==1.7.1
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+reportportal-client==5.2.3
 requests==2.28.1
 selenium==4.4.0
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
+splinter==0.18.1
 tqdm==4.64.0
 trio==0.21.0
 trio-websocket==0.9.2
 urllib3==1.26.11
+wcwidth==0.2.5
 webdriver-manager==3.8.3
 wsproto==1.1.0
